maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:21: error: expected class or object definition
def keepHandOnSideWall(){
^Escaper:40: error: expected class or object definition
def Nord(){
^Escaper:60: error: expected class or object definition
def okgauche(){
^Escaper:64: error: expected class or object definition
while(!okgauche()){
^Escaper:72: error: Unmatched closing brace '}' ignored here
}
^